--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,411 +1,12 @@
-$font: 'Quicksand', sans-serif;
-$primaryColor: var(--primaryColor);
-$secondaryColor: var(--secondaryColor);
-$primaryDark: rgb(30,30,30);
-$tertiaryDark: rgb(50,50,50);
-$primaryOrange: rgb(255,140,0);
-$secondaryOrange: rgb(255, 190, 0);
-$tertiaryOrange: rgb(255, 160, 0);
-$textColor: var(--textColor);
-$sectionsPadding: 2em 4em;
-
-:root{
-    --primaryColor: rgb(30,30,30);
-    --secondaryColor: rgb(20,20,20);
-    --textColor: rgb(255,255,255);
-}
-.dark_theme{
-    --primaryColor: rgb(30,30,30);
-    --secondaryColor: rgb(20,20,20);
-    --textColor: rgb(255,255,255);
-}
-.light_theme{
-    --primaryColor: rgb(255,255,255);
-    --secondaryColor: rgb(240,240,240);
-    --textColor: rgb(30,30,30);
-}
-
-body{
-    font-family: $font;
-    background-color: $primaryColor;
-    color: $textColor;
-    margin: 0;
-    font-size: 14px;
-    ul{
-        list-style-type: none;
-        padding: 0;
-    }
-    
-    a{
-        text-decoration: none;
-        color: $textColor;
-        &:hover{
-            color: $primaryOrange;
-            transition: 0.3s;
-        }
-    }
-    &::-webkit-scrollbar{
-        width: 0.5em;
-    }
-    &::-webkit-scrollbar-thumb {
-        background: $textColor;
-        border-radius: 1em;
-    }
-}
-
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5em 4em;
-    &_menulogo{
-        display: flex;
-        align-items: center;
-        &_mobile{
-            display: none;
-        }
-        &_containerlogo{
-            display: flex;
-            // &_logo{
-            //     padding: 0 0.5em 0 0;
-            //     width: 3em;
-            // }
-            span{
-                color: $primaryOrange;
-            }
-        }
-    }
-    &_navigation_list{
-        display: flex;
-        li{
-            padding: 0 4em;
-        }
-    }
-    &_signin{
-        font-family: $font;
-        cursor: pointer;
-        background-color: $primaryOrange;
-        color: white;
-        border: 0;
-        border-radius: 1em;
-        padding: 0.5em 2em;
-    }
-}
-
-#svglogo_path{
-    fill: $textColor;
-}
-
-.headercontainer{
-    display: flex;
-    flex-direction: column;
-    height: 25em;
-    text-align: center;
-    background: linear-gradient(135deg, $secondaryOrange 65%, $tertiaryOrange);
-    border-radius: 0 0 1em 1em;
-
-    &_title{
-        width: 30%;
-        margin: auto;
-    }
-}
-
-.features{
-    max-width: 1800px;
-    margin: auto;
-    padding: $sectionsPadding;
-    &_container{
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        margin: 2em 0;
-        &_article{
-            width: 20em;
-            margin: 1em 0;
-            padding: 0 1em 0 0;
-            .new, .reviews, .favorites{
-                width: 2.5em;
-                fill: $primaryOrange;
-            }
-        }
-    }
-}
-
-.media{
-    background-color: $secondaryColor;
-    padding: $sectionsPadding;
-    h2{
-        max-width: 1800px;
-        margin: 1em auto;
-    }
-    &_container{
-        max-width: 1800px;
-        margin: auto;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 15em);
-    }
-    &_article{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        background-color: $primaryColor;
-        border-radius: 1em;
-        margin: 0em 1em 1em 0;
-        img{
-            width: 100%;
-            object-fit: cover;
-            border-radius: 0 0 1em 1em;
-        }
-    
-        &_container{
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            padding: 0 1.5em;
-    
-            button{
-                align-self: flex-end;
-                font-family: $font;
-                cursor: pointer;
-                background-color: rgba(0, 0, 0, 0);
-                color: $textColor;
-                border: 0.15em solid $primaryOrange;
-                border-radius: 1em;
-                padding: 0.4em 1em;
-                margin: 1em 0;
-                &:hover{
-                    background-color: $primaryOrange;
-                    transition: 0.3s;
-                }
-            }
-        }
-    }
-    &_games{
-        grid-row: 1/3;
-        img{
-            max-width: 100%;
-            height: 50%;
-            object-fit: cover;
-            // border-radius: 1em 0em 0em 1em;
-        }
-    }
-    &_series{
-        grid-column: 2/4;
-        grid-row: 2;
-        flex-direction: row;
-        img{
-            max-width: 50%;
-            // border-radius: 1em 0em 0em 1em;
-            border-radius: 0em 1em 1em 0em;
-        }
-    }
-    &_movies, &_animes{
-        flex-direction: row;
-        img{
-            max-width: 40%;
-            height: 100%;
-            // border-radius: 1em 0em 0em 1em;
-            border-radius: 0em 1em 1em 0em;
-        }
-    }
-    // &_animes{
-    //     flex-direction: row;
-    //     img{
-    //         width: 40%;
-    //         height: 100%;
-    //         border-radius: 0em 1em 1em 0em;
-    //     }
-    // }
-}
-
-.news{
-    max-width: 1800px;
-    padding: $sectionsPadding;
-    margin: auto;
-    &_wrapper{
-        display: flex;
-        &_selector{
-            label{
-                margin: 0 2em 0 0;
-            }
-            input[type="radio"]{
-                display: none;
-                &:hover + label{
-                    color: $secondaryOrange;
-                }
-                &:checked + label{
-                    color: $primaryOrange;
-                    font-weight: bold;
-                    transition: 0.2s;
-                }
-                
-            }
-        }
-    }
-    #container_0{
-        display: flex;
-    }
-    &_container{
-        display: none;
-        overflow-x:auto;
-        overflow-y: hidden;
-        &::-webkit-scrollbar{
-            height: 0.5em;
-        }
-        &::-webkit-scrollbar-thumb {
-            background: $textColor;
-            border-radius: 1em;
-        }
-    }
-    &_article{
-        min-width: 15em;
-        max-width: 15em;
-        min-height: 15em;
-        max-height: 20em;
-        background-color: $secondaryColor;
-        border-radius: 1em;
-        margin: 2em 2em 1em 0;
-        img{
-            max-width: 100%;
-            width: 100%;
-            min-height: 50%;
-            max-height: 50%;
-            object-fit: cover;
-            border-radius: 1em 1em 0 0;
-        }
-        &_text{
-            padding: 0.5em 1em 1em 1em;
-            h3{
-                margin: 0.2em 0;
-            }
-        }
-    }
-}
-
-.release{
-    margin: 2em 0 0 0;
-    &_selectors{
-        background-color: $secondaryColor;
-        padding: $sectionsPadding;
-        h2{
-            max-width: 1800px;
-            margin: 1em auto;
-        }
-        &_wrapper{
-            display: flex;
-            max-width: 1800px;
-            margin: auto;
-            &_input{
-                label{
-                    margin: 0 2em 0 0;
-                }
-                input[type="radio"]{
-                    display: none;
-                    &:hover + label{
-                        color: $secondaryOrange;
-                    }
-                    &:checked + label{
-                        color: $primaryOrange;
-                        font-weight: bold;
-                        transition: 0.2s;
-                    }
-                }
-            }
-        }
-    }
-    #release_container_0{
-        display: block;
-    }
-    &_element{
-        display: none;
-        position: relative;
-        &_imageshadow{
-            max-height: 40em;
-            box-shadow: inset 10em 0 30em 4em $primaryDark;
-            img{
-                position: relative;
-                z-index: -2;
-                width: 100%;
-                height: fit-content;
-                max-height: 40em;
-                object-fit: cover;
-            }
-        }
-        &_text{
-            position: absolute;
-            width: 40%;
-            left: 5em;
-            bottom: 5em;
-            color: white;
-        }
-    }
-}
-
-.footer{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    background-color: $secondaryColor;
-    border-top: 0.15em solid $tertiaryDark;
-    padding: $sectionsPadding;
-    &_element{
-        width: 15em;
-        ul{
-            li{
-                padding: 0.25em 0;
-            }
-        }
-        &_themes{
-            display: flex;
-            #dark_theme{
-                font-family: $font;
-                background-color: $primaryDark;
-                color: white;
-                cursor: pointer;
-                padding:  0.5em 0.7em;
-                margin: 0 0.5em 0 0;
-                border: 0.15em solid $textColor;
-                border-radius: 1em;
-            }
-            #light_theme{
-                font-family: $font;
-                background-color: white;
-                color: black;
-                cursor: pointer;
-                padding:  0.5em 0.7em;
-                border: 0.15em solid $textColor;
-                border-radius: 1em;
-            }
-        }
-    }
-    &_fa_social{
-        font-size: 1.25em;
-        border-radius: 0.3em;
-        padding: 0.1em;
-        margin: 0 1em 0 0;
-        &:hover{
-            color: $primaryOrange;
-            transition: 0.2s;
-        }
-    }
-}
-
-@media (min-width: 1960px){
-    .release{
-        &_element{
-            &_text{
-                width: 1800px;
-                right: 0;
-                left: 0;
-                margin: auto;
-                h3, p{
-                    width: 40%;
-                }
-            }
-        }
-    }
-}
+@import 'variables';
+@import 'themes';
+@import 'base';
+@import './layouts/header';
+@import './layouts/features';
+@import './layouts/medias';
+@import './layouts/news';
+@import './layouts/release';
+@import './layouts/footer';
 
 @media (max-width: 1100px){
     $sectionsPadding: 1em 2em;
@@ -552,43 +153,3 @@ body{
     }
 }
 
-@media (max-width: 600px){
-    .media{
-        &_container{
-            grid-template-columns: 1fr;
-            grid-template-rows: 26em repeat(2, 14em) 26em;
-        }
-        &_article{
-            margin: 0 0 1em 0;
-            &_container{
-                padding: 0 1em;
-            }
-        }
-        &_games{
-            grid-row: 1;
-            img{
-                max-height: 50%;
-            }
-        }
-        &_movies{
-            grid-row: 2;
-        }
-        &_movies, &_animes{
-            img{
-                max-width: 45%;
-            }
-        }
-        &_series{
-            flex-direction: column;
-            grid-column: 1;
-            grid-row: 4;
-            img{
-                height: 50%;
-                max-width: 100%;
-                object-position: top;
-                // border-radius: 1em 0em 0em 1em;
-                border-radius: 0em 0 1em 1em;
-            }
-        }
-    }
-}
